traces/bug_201.txt
examples++-load/Element_P1bl.cpp:155: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::TypeOfFE_Edge1_3d accesses global variable from a different translation unit: map_type|.
Showing all 5 steps of the trace


examples++-load/Element_P1bl.cpp:155:5: initialization of Fem2D::TypeOfFE_Edge1_3d
153.       static TypeOfFE_P1blLagrange3d  P1blLagrange3d; //
154.       GTypeOfFE<Mesh3> & GP1blLagrange3d(P1blLagrange3d); //
155.       static AddNewFE3 TypeOfFE_Edge1_3d("P1bl3d",&GP1blLagrange3d); //
           ^
156.      
157.       // link with FreeFem++

examples++-load/Element_P1bl.cpp:155:22: call to AddNewFE3_AddNewFE3
153.       static TypeOfFE_P1blLagrange3d  P1blLagrange3d; //
154.       GTypeOfFE<Mesh3> & GP1blLagrange3d(P1blLagrange3d); //
155.       static AddNewFE3 TypeOfFE_Edge1_3d("P1bl3d",&GP1blLagrange3d); //
                            ^
156.      
157.       // link with FreeFem++

src/fflib/AddNewFE.h:101:36: call to atype<Fem2D::GTypeOfFE<Fem2D::Mesh3>_*>
  99.       {
  100.         ffassert(tfe); // check 
  101.         Global.New(FEname, Type_Expr(atype<Fem2D::TypeOfFE3*>() ,new  EConstantTypeOfFE3(tfe)));
                                            ^
  102.         if(FEname2 && strlen(FEname2))
  103.   	  TEF2dto3d[FindFE2(FEname2)]=tfe;

src/fflib/AFunction.hpp:339:14: call to ShowType
    337.    // basicForEachType * r=map_type[];
    338.     if (ir == map_type.end()) { cerr << "Error: aType  '" << typeid(T).name() << "', doesn't exist\n";
    339.                ShowType(cerr);
                        ^
    340.               throw(ErrorExec("exit",1));}
    341.     return ir->second;}

src/fflib/AFunction2.cpp:708:10: access to map_type|
    706.    
    707.      map<const string,basicForEachType *>::const_iterator i;
    708.      for(i=map_type.begin();i!=map_type.end();i++)
                    ^
    709.        {
    710.          f << " --"<< i->first <<" = " ; 
